# recsys

./: .gitignore  LICENSE  build_graph.py  eval.py  process_steam.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
notebooks/hm/: 4_random_benchmark.ipynb
notebooks/movielens/: 1_split.ipynb  2_baseline_benchmark.ipynb  3_cleora.ipynb  4_mf.ipynb
notebooks/steam/: Untitled.ipynb  data_stats.ipynb  eval_knowledge_graph.ipynb  kfp.ipynb  kg_visualisation.ipynb  latency_tests.ipynb  plot_metrics.ipynb  rl_recommender.ipynb  steam_graph.ipynb  steam_training.ipynb  steam_training_MF.ipynb  steam_training_kfp.ipynb  train.ipynb  train_graph.ipynb  train_knowledge_graph.ipynb
notebooks/steam/RL/: Catalyst_RL_DDPG.ipynb  Catalyst_RL_DQN.ipynb  rl_recommender.ipynb
recsys/: utils.py
recsys/data/: datastore.py  utils.py
recsys/dataset/: deep.py
recsys/evaluation/: prediction.py
recsys/evaluation/metrics/: __init__.py  map.py  precision.py  recall.py
recsys/features/: features.py  scheme.py  store.py
recsys/layers/: __init__.py  embedding.py
recsys/metrics/: __init__.py
recsys/models/: __init__.py  deepfm.py  mf.py
recsys/models/gnn/: gat.py  sage.py
recsys/models/kg/: __init__.py  ripplenet.py
recsys/pipelines/: build_graph.py  build_knowledge_graph.py  eval.py  eval_graph.py  eval_knowledge_graph.py  process_steam.py  train_graph.py
recsys/preprocessing/: preprocess.py
scripts/: build_graph.py  build_knowledge_graph.py  eval.py  eval_graph.py  eval_knowledge_graph.py  process_steam.py  train.py  train_graph.py  train_knowledge_graph.py
src/: dataset.py  feature_store.py  metrics.py  utils.py
src/data/: dataframe.py  datastore.py  utils.py
src/dataset/: deep.py  kg.py
src/features/: features.py  scheme.py  store.py
src/inference/: __init__.py  inference.py
src/layers/: __init__.py  embedding.py  feature_cross.py  mlp.py
src/metrics/: metrics.py
src/models/: __init__.py  deepfm.py  ncf.py
src/models/gnn/: __init__.py  gcn.py  gnn.py  sage.py
src/preprocessing/: preprocess.py  utils.py  workflow.py
src/steam/: mf.py  sage.py
src/utils/: __init__.py  utils.py
tests/: test_metrics.py  test_version.py
tests/evaluation/: test_evaluation.py  test_metrics.py
