[tool.poetry]
name = "thesis-recsys"
version = "0.1.0"
description = "A sandbox to write pipelines and train recommender systems models"
authors = ["Milosz <milosz.hanczyk01@gmail.com>"]
readme = "README.md"
packages = [
    {include = "data", from = "src"},
    {include = "metrics", from = "src"},
    {include = "preprocessing", from = "src"},
    {include = "features", from = "src"},
    {include = "layers", from = "src"},
    {include = "models", from = "src"},
    {include = "scripts"}
]

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "1.26.0"
pandas = "2.1.1"
torch = "^2.1.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
tensorboard = "^2.15.0"
torch-geometric = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
mypy = "^1.6.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
process_steam = "scripts.process_steam:process"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
