[tool.poetry]
name = "thesis-recsys"
version = "0.1.0"
description = "A sandbox to write pipelines and train recommender systems models"
authors = ["Milosz <milosz.hanczyk01@gmail.com>"]
readme = "README.md"
packages = [
    {include = "data", from = "src"},
    {include = "dataset", from = "src"},
    {include = "metrics", from = "src"},
    {include = "preprocessing", from = "src"},
    {include = "features", from = "src"},
    {include = "layers", from = "src"},
    {include = "models", from = "src"},
    {include = "inference", from = "src"},
    {include = "scripts"}
]

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "1.26.0"
pandas = "2.1.1"
torch = {version = "2.0.1", source = "pytorch"}
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
tensorboard = "^2.15.0"
torch-geometric = "^2.4.0"
jupyterlab = "^4.0.7"
torch-sparse = {version = "^0.6.18+pt20cu118", source = "torch-sparse"}
torch-scatter = {version = "^2.1.2+pt20cu118", source = "torch-sparse"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
mypy = "^1.6.1"
flake8 = "^6.1.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
process_steam = "scripts.process_steam:process"
build_graph = "scripts:build_graph:build_graph"
train = "scripts.train:train"
eval = "scripts.eval:evaluate"
train_graph = "scripts.train_graph:train"
eval_graph = "scripts.eval_graph:evaluate"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "torch-sparse"
url = "https://data.pyg.org/whl/torch-2.0.0+cu118.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
