[project]
name = "recsys"
version = "0.1.0"
description = "A sandbox to write pipelines and train recommender systems models"
authors = [{name = "Miłosz Hańczyk", email = "milosz.hanczyk01@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightgbm>=4.5.0",
    "pyarrow>=18.1.0",
    "pycleora>=2.0.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "torch-geometric>=2.6.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
test = [
    "pytest>=8.3.4",
]
kaggle = [
    "oauth2client>=4.1.3",
    "pydrive2[fsspec]>=1.21.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { exclude = ["assets", "notebooks"]}}
